# openkeri

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 001-core-contract.md  002-project-blueprint.md  003-schema-contract.md
examples/algorithm_tutor/: README.md  demo.py  interactive.py  llm_deepseek_demo.py  llm_mock_demo.py  problems.py  registry.py  session_factory.py  tutor.py
examples/algorithm_tutor/solutions/: correct.py  incorrect.py  palindrome_correct.py  palindrome_incorrect.py
examples/learning_manager/: README.md  app.py  draft_generator.py  generate_plan.py  main.py  plan_api.py  plan_graph_generator.py  plan_graph_preview.html  plan_intake.py  plan_route_preview.html  planner.py  storage.py
examples/learning_manager/frontend/: app.js  index.html  styles.css
examples/learning_manager/plan_editor/: ch1.html  ch1_build_preview.html  ch1_chat_preview.html  ch1_workspace_preview.html  (+8 more)
src/openkeri/: __init__.py
tests/: test_algorithm_tutor_demo.py  test_algorithm_tutor_interactive.py  test_algorithm_tutor_llm_deepseek_demo.py  test_algorithm_tutor_llm_mock_demo.py  test_algorithm_tutor_problems.py  test_algorithm_tutor_tutor.py  test_deepseek_client.py  test_evidence.py  test_learning_manager.py  test_learning_manager_plan_fixtures.py  test_learning_manager_plan_graph_generator.py  test_learning_manager_plan_intake.py  test_llm_package.py  test_llm_teacher.py  test_memory.py  test_package.py  test_python_subprocess_runner.py  test_rule_based_teacher.py  test_runtime_session.py  test_schemas.py  test_tasks_registry.py
(+77 files in other folders)
