[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openkeri"
version = "0.0.0"
description = "A runtime for building adaptive teacher agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "openkeri contributors" }
]
dependencies = [
  "pydantic>=2,<3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.4"
]

[tool.hatch.build.targets.wheel]
packages = ["src/openkeri"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

